// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with 1 expense 1`] = `
<div>
  <h2>
    Sum of 
    1
     
    expense
     is 
    $94.95
  </h2>
</div>
`;

exports[`should render ExpenseSummary correctly with multiple expenses 1`] = `
<div>
  <h2>
    Sum of 
    3
     
    expenses
     is 
    $1,244.35
  </h2>
</div>
`;
